--- a/BankApp/build.gradle
+++ b/BankApp/build.gradle
@@ -12,7 +12,7 @@ apply plugin : 'application'
  //   testCompile 'junit:junit:4.12'
   //  testCompile 'org.mockito:mockito-core:1.+'
 //}
-//mainClassName = 'com.cg.test.BankTest' 
+mainClassName = 'com.cg.test.BankTest' 
 
 
 //sonarRunner{
